# Pig-Dice

./: .gitignore  CMakeLists.txt  PigDice  README.md
include/: dice.h  pig_dice_definitions.h  pig_dice_game.h  pig_dice_ia.h
src/: dice.cpp  main.cpp  pig_dice_game.cpp  pig_dice_ia.cpp
